[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "tth"
version = "0.0.1"
description = "A simple package to create MS Word tables with truth tables of logic gates."
authors = [
  {name = "Muhammad Altaaf", email = "taafuuu@gmail.com"},
]
dependencies = [
    "python-docx == 1.1.2",
    # "math2docx == 2.0.2"
]
classifiers = [
  # Indicate who your project is intended for
  "Intended Audience :: Users",
  "Private :: Do Not Upload"
]

[project.scripts]
tth = "tth.cli:main"
